Fix navbar overlapping body

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f2f4f8;
   margin: 0;
+  margin-bottom: 100px;
   box-sizing: border-box;
 }
 
@@ -176,6 +177,11 @@ code {
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
+
+.submitButton {
+  margin-bottom: 4rem;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
